--- a/org.naroyo.timesup/WebContent/WEB-INF/web.xml
+++ b/org.naroyo.timesup/WebContent/WEB-INF/web.xml
@@ -2,8 +2,25 @@
 <web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+    <servlet>
+    	<servlet-name>Resteasy</servlet-name>
+    	<servlet-class>
+    		org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
+    	</servlet-class>
+    </servlet>
     <servlet-mapping>
-        <servlet-name>javax.ws.rs.core.Application</servlet-name>
+        <servlet-name>Resteasy</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
+    <context-param>
+    	<param-name>javax.ws.rs.Application</param-name>
+    	<param-value>
+    		timesup.org.naroyo.timesup.rest.RestApplication
+    	</param-value>
+    </context-param>
+    <listener>
+    	<listener-class>
+    		org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap
+    	</listener-class>
+    </listener>
 </web-app>
