--- a/org.naroyo.timesup/pom.xml
+++ b/org.naroyo.timesup/pom.xml
@@ -16,9 +16,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>javax.ws.rs</groupId>
-			<artifactId>javax.ws.rs-api</artifactId>
-			<version>2.0</version>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>3.1.4.Final</version>
 		</dependency>
 
 		<dependency>
