--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
                 </servlet-class>
 		<init-param>
 			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>com.mkyong.app.MessageApplication</param-value>
+			<param-value>com.naroyo.app.MessageApplication</param-value>
 		</init-param>
 	</servlet>
 
