Un peu de nettoyage...

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 		<servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
 		<init-param>
 			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>com.naroyo.app.MessageApplication</param-value>
+			<param-value>com.naroyo.app.RestApplication</param-value>
 		</init-param>
 	</servlet>
 
